--- a/index.html
+++ b/index.html
@@ -16,57 +16,76 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <header>
-      <nav class="main-navigation">
-        <a
-          ><img
-            src="./img/index-logo.svg"
-            alt="City of sedona"
-            width="138"
-            height="70"
-        /></a>
-        <ul>
-          <li><a href="blank.html">Информация</a></li>
-          <li><a href="blank.html">Фото и видео</a></li>
-          <li><a href="blank.html">Карта штата</a></li>
-          <li><a href="blank.html">Гостиницы</a></li>
-        </ul>
-      </nav>
-    </header>
+    <div class="page-wrap">
+      <header>
+        <nav class="main-navigation">
+          <div>
+            <div><a href="blank.html">Информация</a></div>
+            <div><a href="blank.html">Фото и видео</a></div>
+          </div>
 
-    <main>
-      <h1 class="visually-hidden">Sedona</h1>
-      <section class="main-content">
-        <p>
-          <img src="./img/welcome.svg" alt="Welcome" width="188" height="45" />
+          <div>
+            <div class="logo">
+              <a
+                ><img
+                  src="./img/index-logo.svg"
+                  alt="City of sedona"
+                  width="138"
+                  height="70"
+              /></a>
+            </div>
+          </div>
+
+          <div>
+            <div><a href="blank.html">Карта штата</a></div>
+            <div><a href="blank.html">Гостиницы</a></div>
+          </div>
+        </nav>
+      </header>
+
+      <main>
+        <h1 class="visually-hidden">Sedona</h1>
+        <section class="main-content">
+          <p>
+            <img
+              src="./img/welcome.svg"
+              alt="Welcome"
+              width="188"
+              height="45"
+            />
+            <img
+              src="./img/to-the-georgeous.svg"
+              alt="to the georgeous"
+              width="256"
+              height="29"
+            />
+            <img
+              src="./img/sedona.svg"
+              alt="Sedona. Because the Grand Canyon sucks!"
+              width="457"
+              height="213"
+            />
+          </p>
           <img
-            src="./img/to-the-georgeous.svg"
-            alt="to the georgeous"
-            width="256"
-            height="29"
+            src="./img/sedona-background-shape.svg"
+            class="background-shape"
+            alt=""
           />
-          <img
-            src="./img/sedona.svg"
-            alt="Sedona. Because the Grand Canyon sucks!"
-            width="457"
-            height="213"
-          />
-        </p>
-        <img
-          src="./img/sedona-background-shape.svg"
-          class="background-shape"
-          alt=""
-        />
-      </section>
+        </section>
 
-      <section>
-        <h2>Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
-        <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
-      </section>
+        <section>
+          <h2>Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
+          <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
+        </section>
 
-      <section>
-        <ul>
-          <li>
+        <section class="advantages-grid">
+          <div>
+            <h3>Настоящий городок</h3>
+
+            <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+          </div>
+          <div class="first-image">111</div>
+          <div>
             <img
               src="./img/icons/housing.svg"
               alt="Жильё"
@@ -75,13 +94,13 @@
             />
             <h3>Жильё</h3>
             <p>Рекомендуем пожить в настоящем мотеле, как в кино!</p>
-          </li>
-          <li>
+          </div>
+          <div>
             <img src="./img/icons/meal.svg" alt="Еда" width="74" height="70" />
             <h3>Еда</h3>
             <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
-          </li>
-          <li>
+          </div>
+          <div>
             <img
               src="./img/icons/souvenirs.svg"
               alt="Сувениры"
@@ -90,86 +109,80 @@
             />
             <h3>Сувениры</h3>
             <p>Не только китайского, но и местного производства!</p>
-          </li>
-        </ul>
-      </section>
+          </div>
+          <div class="second-image">222</div>
+          <div>
+            <h3>Там есть мост дьявола</h3>
 
-      <section>
+            <p>Да, по нему можно пройти! Если конечно Вы осмелитесь</p>
+          </div>
+
+          <div>
+            <h3>Небольшая площадь</h3>
+
+            <p>Все достопримечательности находятся очень близко</p>
+          </div>
+          <div>
+            <h3>Красивая дорога</h3>
+
+            <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+          </div>
+          <div>
+            <h3>Мало туристов</h3>
+            <p>Большинство едет в Гранд Каньон и толпится там</p>
+          </div>
+        </section>
+
+        <section class="interested">
+          <h2>Заинтересовались?</h2>
+          <p>
+            Укажите предполагаемые даты поездки, и мы покажем вам лучшие
+            предложения гостиниц в Седоне
+          </p>
+        </section>
+      </main>
+
+      <footer class="footer-grid">
         <div>
-          <h3>Настоящий городок</h3>
-
-          <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+          <a href="#">#visitsedona</a>
+          <a href="tel:+74956660166">+7(495) 666-01-66</a>
         </div>
+
         <div>
-          <h3>Там есть мост дьявола</h3>
-
-          <p>Да, по нему можно пройти! Если конечно Вы осмелитесь</p>
+          <ul>
+            <li>
+              <a href="#">
+                <span class="visually-hidden twitter">Твиттер</span>
+                <img src="./img/icons/twitter.svg" alt="twitter" />
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <span class="visually-hidden">Фейсбук</span>
+                <img src="./img/icons/facebook.svg" alt="facebook" />
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <span class="visually-hidden"> Ютьюб</span>
+                <img src="./img/icons/youtube.svg" alt="youtube" />
+              </a>
+            </li>
+          </ul>
         </div>
+
         <div>
-          <h3>Небольшая площадь</h3>
-
-          <p>Все достопримечательности находятся очень близко</p>
+          <p>
+            Website by
+            <img
+              src="./img/logo-htmlacademy.svg"
+              alt="html academy"
+              width="115"
+              height="41"
+            />
+          </p>
         </div>
-        <div>
-          <h3>Красивая дорога</h3>
-
-          <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-        </div>
-        <div>
-          <h3>Мало туристов</h3>
-          <p>Большинство едет в Гранд Каньон и толпится там</p>
-        </div>
-      </section>
-
-      <section class="interested">
-        <h2>Заинтересовались?</h2>
-        <p>
-          Укажите предполагаемые даты поездки, и мы покажем вам лучшие
-          предложения гостиниц в Седоне
-        </p>
-      </section>
-    </main>
-
-    <footer>
-      <div>
-        <a href="#">#visitsedona</a>
-        <a href="tel:+74956660166">+7(495) 666-01-66</a>
-      </div>
-
-      <div>
-        <ul>
-          <li>
-            <a href="#">
-              <span class="visually-hidden twitter">Твиттер</span>
-              <img src="./img/icons/twitter.svg" alt="twitter" />
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <span class="visually-hidden">Фейсбук</span>
-              <img src="./img/icons/facebook.svg" alt="facebook" />
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <span class="visually-hidden"> Ютьюб</span>
-              <img src="./img/icons/youtube.svg" alt="youtube" />
-            </a>
-          </li>
-        </ul>
-      </div>
-
-      <div>
-        <p>
-          Website by
-          <img
-            src="./img/logo-htmlacademy.svg"
-            alt="html academy"
-            width="115"
-            height="41"
-          />
-        </p>
-      </div>
-    </footer>
+      </footer>
+    </div>
   </body>
 </html>
