--- a/catalog.html
+++ b/catalog.html
@@ -23,16 +23,14 @@
             <div><a href="blank.html">Фото и видео</a></div>
           </div>
 
-          <div>
-            <div class="logo">
-              <a
-                ><img
-                  src="./img/index-logo.svg"
-                  alt="City of sedona"
-                  width="138"
-                  height="70"
-              /></a>
-            </div>
+          <div class="logo">
+            <a
+              ><img
+                src="./img/index-logo.svg"
+                alt="City of sedona"
+                width="138"
+                height="70"
+            /></a>
           </div>
 
           <div>
@@ -274,13 +272,13 @@
       </main>
 
       <footer class="footer-grid">
-        <div>
+        <div class="contact-us">
           <a href="#">#visitsedona</a>
           <a href="tel:+74956660166">+7(495) 666-01-66</a>
         </div>
 
         <div>
-          <ul>
+          <ul class="social-btns">
             <li>
               <a href="#">
                 <span class="visually-hidden twitter">Твиттер</span>
@@ -301,7 +299,8 @@
             </li>
           </ul>
         </div>
-        <div>
+
+        <div class="made-by">
           <p>
             Website by
             <img
