--- a/index.html
+++ b/index.html
@@ -45,27 +45,32 @@
 
       <main>
         <h1 class="visually-hidden">Sedona</h1>
-        <section class="main-content">
-          <p>
+        <section class="main-section main-content">
+          <div class="welcome">
             <img
               src="./img/welcome.svg"
               alt="Welcome"
               width="188"
               height="45"
             />
+          </div>
+          <div class="to-the-georgeous">
             <img
               src="./img/to-the-georgeous.svg"
               alt="to the georgeous"
               width="256"
               height="29"
             />
+          </div>
+          <div class="because">
             <img
               src="./img/sedona.svg"
               alt="Sedona. Because the Grand Canyon sucks!"
               width="457"
               height="213"
             />
-          </p>
+          </div>
+
           <img
             src="./img/sedona-background-shape.svg"
             class="background-shape"
@@ -73,12 +78,12 @@
           />
         </section>
 
-        <section>
+        <section class="main-section introduction">
           <h2>Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
           <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
         </section>
 
-        <section class="advantages-grid">
+        <section class="main-section advantages-grid">
           <div>
             <h3>Настоящий городок</h3>
 
@@ -86,27 +91,39 @@
           </div>
           <div class="first-image">111</div>
           <div>
-            <img
-              src="./img/icons/housing.svg"
-              alt="Жильё"
-              width="75"
-              height="72"
-            />
+            <div class="image-container">
+              <img
+                src="./img/icons/housing.svg"
+                alt="Жильё"
+                width="75"
+                height="72"
+              />
+            </div>
+
             <h3>Жильё</h3>
             <p>Рекомендуем пожить в настоящем мотеле, как в кино!</p>
           </div>
           <div>
-            <img src="./img/icons/meal.svg" alt="Еда" width="74" height="70" />
+            <div class="image-container">
+              <img
+                src="./img/icons/meal.svg"
+                alt="Еда"
+                width="74"
+                height="70"
+              />
+            </div>
             <h3>Еда</h3>
             <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
           </div>
           <div>
-            <img
-              src="./img/icons/souvenirs.svg"
-              alt="Сувениры"
-              width="64"
-              height="76"
-            />
+            <div class="image-container">
+              <img
+                src="./img/icons/souvenirs.svg"
+                alt="Сувениры"
+                width="64"
+                height="76"
+              />
+            </div>
             <h3>Сувениры</h3>
             <p>Не только китайского, но и местного производства!</p>
           </div>
@@ -117,23 +134,23 @@
             <p>Да, по нему можно пройти! Если конечно Вы осмелитесь</p>
           </div>
 
-          <div>
+          <div class="bg-gray">
             <h3>Небольшая площадь</h3>
 
             <p>Все достопримечательности находятся очень близко</p>
           </div>
-          <div>
+          <div class="bg-gray">
             <h3>Красивая дорога</h3>
 
             <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
           </div>
-          <div>
+          <div class="bg-gray">
             <h3>Мало туристов</h3>
             <p>Большинство едет в Гранд Каньон и толпится там</p>
           </div>
         </section>
 
-        <section class="interested">
+        <section class="main-section interested">
           <h2>Заинтересовались?</h2>
           <p>
             Укажите предполагаемые даты поездки, и мы покажем вам лучшие
@@ -143,13 +160,13 @@
       </main>
 
       <footer class="footer-grid">
-        <div>
+        <div class="contact-us">
           <a href="#">#visitsedona</a>
           <a href="tel:+74956660166">+7(495) 666-01-66</a>
         </div>
 
         <div>
-          <ul>
+          <ul class="social-btns">
             <li>
               <a href="#">
                 <span class="visually-hidden twitter">Твиттер</span>
@@ -171,7 +188,7 @@
           </ul>
         </div>
 
-        <div>
+        <div class="made-by">
           <p>
             Website by
             <img
